--- a/hw6-js.html
+++ b/hw6-js.html
@@ -9,7 +9,6 @@
 
 <body>
     <script>
-
         var teams = ["Team A", "Team B", "Team C", "Team D", "Team E", "Team F"];
 
         document.write("<table border='1'>");
@@ -20,12 +19,19 @@
 
                 var result = Math.floor(Math.random() * 3) + 1;
 
-                var goals = Math.floor(Math.random() * 6);
+                var goals = Math.floor(Math.random() * 6) + 1;
 
                 var winner = "";
                 if (result === 1) {
                     winner = teams[i];
-                } else if (result === 3) {
+                } 
+				else if (result === 2) {
+					if(goals % 2 !== 0){
+						goals += 1;
+					}
+                    winner = "TIE";
+                }
+				else if(result == 3) {
                     winner = teams[j];
                 }
 
@@ -33,7 +39,6 @@
             }
         }
         document.write("</table>");
-
     </script>
 </body>
 
